--- a/build.gradle
+++ b/build.gradle
@@ -16,17 +16,17 @@ apply plugin: "com.jfrog.bintray"
 apply plugin: "com.github.dcendents.android-maven"
 
 group = "com.crossbowffs.remotepreferences"
-version = "0.1"
+version = "0.2"
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    buildToolsVersion "24.0.1"
 
     defaultConfig {
         minSdkVersion 1
         targetSdkVersion 23
-        versionCode 1
-        versionName "0.1"
+        versionCode 2
+        versionName "0.2"
     }
 
     sourceSets {
@@ -67,7 +67,7 @@ bintray {
         vcsUrl = "https://github.com/apsun/RemotePreferences.git"
         configurations = ["archives"]
         version {
-            name = "0.1"
+            name = "0.2"
         }
     }
 }
@@ -83,7 +83,7 @@ install {
             packaging "aar"
             groupId "com.crossbowffs.remotepreferences"
             artifactId "remotepreferences"
-            version "0.1"
+            version "0.2"
 
             licenses {
                 license {
@@ -99,7 +99,7 @@ install {
                 developer {
                     id "crossbowffs"
                     name "Andrew Sun"
-                    email "youlosethegame@live.com"
+                    email "0xandrewsun@gmail.com"
                 }
             }
         }
